--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 <a href="{{ site.url }}" class="logo">{{ site.short_logo }}</a>
 {% endif %}
 <ul class="menu">
-<li class="menu__entry"><a href="{{site.url}}">home</a></li>
+<li class="menu__entry"><a href="https://colomer361.github.io/">home</a></li>
 <li class="menu__entry"><a href="{{site.url}}/projects">projectos</a></li>
 <li class="menu__entry"><a href="{{site.url}}/posts">postssss</a></li>
 </ul>
