--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
 {% endif %}
 <ul class="menu">
 <li class="menu__entry"><a href="https://colomer361.github.io/">home</a></li>
-<li class="menu__entry"><a href="{{site.url}}/projects">projectos</a></li>
-<li class="menu__entry"><a href="{{site.url}}/posts">postssss</a></li>
+<li class="menu__entry"><a href="{{site.url}}/projects">projectosssssssss</a></li>
+<li class="menu__entry"><a href="{{site.url}}/posts">postssssaaaaaa</a></li>
 </ul>
 </div>
 <ul class="social-links">
